--- a/gb/16/9/30/n8354645.md
+++ b/gb/16/9/30/n8354645.md
@@ -1,18 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tnue256/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tnue256/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tnue256/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tnue256/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tnue256/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tnue256/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tnue256/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tnue256/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tnue256/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tnue256/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tnue256/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tnue256/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tnue256/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>另类疗法排肾结石</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2015/06/1506200551441758-600x400.jpg" />
-<h6>科学实验证明坐中强度过山车可帮助排出小的肾结石，要坐在后面效果才好。（Sarion/维基百科）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2016年10月01日讯】（大纪元记者韩婕综合报导）近日，密歇根州立大学骨科医学院的一位医师在听闻一位泌尿科病患赞扬<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E8%BF%87%E5%B1%B1%E8%BD%A6.md#1">过山车</a>（<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E4%BA%91%E9%9C%84%E9%A3%9E%E8%BD%A6.md#1">云霄飞车</a>）排出<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E8%82%BE%E7%BB%93%E7%9F%B3.md#1">肾结石</a>，决定自己检验一番，结果真的排出肾结石。还得出结论要坐中强度的<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E8%BF%87%E5%B1%B1%E8%BD%A6.md#1">过山车</a>，还要坐在过山车的尾部，排出的概率才高。使<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E5%8F%A6%E7%B1%BB%E7%96%97%E6%B3%95.md#1">另类疗法</a>再度为人关注。</p>
+<p>【大纪元2016年10月01日讯】（大纪元记者韩婕综合报导）近日，密歇根州立大学骨科医学院的一位医师在听闻一位泌尿科病患赞扬<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%BF%87%E5%B1%B1%E8%BD%A6.md#1">过山车</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%91%E9%9C%84%E9%A3%9E%E8%BD%A6.md#1">云霄飞车</a>）排出<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%BE%E7%BB%93%E7%9F%B3.md#1">肾结石</a>，决定自己检验一番，结果真的排出肾结石。还得出结论要坐中强度的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%BF%87%E5%B1%B1%E8%BD%A6.md#1">过山车</a>，还要坐在过山车的尾部，排出的概率才高。使<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A6%E7%B1%BB%E7%96%97%E6%B3%95.md#1">另类疗法</a>再度为人关注。</p>
 <p><strong>过山车排石法</strong></p>
-<p>领导实验的主要作者是脑儿科的沃尔廷格教授（David Wartinger）带着研究团队的用3D打印机打印出许多硅模型肾，内里填满尿和放三个大小不同尺寸的<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E8%82%BE%E7%BB%93%E7%9F%B3.md#1">肾结石</a>在输尿管的低、中、高部位。</p>
+<p>领导实验的主要作者是脑儿科的沃尔廷格教授（David Wartinger）带着研究团队的用3D打印机打印出许多硅模型肾，内里填满尿和放三个大小不同尺寸的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%BE%E7%BB%93%E7%9F%B3.md#1">肾结石</a>在输尿管的低、中、高部位。</p>
 <p>结果证实过山车确实能刺激肾结石排出，但结石太大就无法排出，而且若要效果好，最好是坐在过山车的后面，能疏通约63.89%，最刺激的前面座位只能疏通约心16.67%。这是第一次以科学方法验证传闻排出肾结石方法的效果。</p>
 <p><strong>西医治疗伤身</strong></p>
 <p>传统西医对得了较大肾结石的人，都是建议使用体外碎石震波术或动手术取石，但体外碎石法却有一些禁忌与风险，而动手术摘除结石法，不但创伤大、恢复慢、痛苦大，还会在身上留下巨大伤疤。</p>
-<p>但若病人症状严重，肾功能不良、剧痛、血尿，就不适合用<ahref="https://github.com/tnue256/djy/blob/master/gb/tag/%E5%8F%A6%E7%B1%BB%E7%96%97%E6%B3%95.md#1">另类疗法</a>解决结石问题，必须赶快做手术处理。</p>
+<p>但若病人症状严重，肾功能不良、剧痛、血尿，就不适合用<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A6%E7%B1%BB%E7%96%97%E6%B3%95.md#1">另类疗法</a>解决结石问题，必须赶快做手术处理。</p>
 <p><strong>另类疗法</strong></p>
 <p>另类医疗（alternative therapy）已在世界各地蓬勃兴起，另类医疗的兴起，是在西医的发展无法满足病患需求时，病患转而求助民间流传的另类疗法。</p>
 <p>另类疗法有许多各地传统文化、风俗流传下来与西医发展方向不同的医疗体系，如中医、藏医或印度的阿育吠陀医学，或是许多口耳相传的民俗疗法（folk medicine），因没有提出科学研究的数据证明治疗效果，而被西医质疑。</p>
@@ -22,7 +21,7 @@
 <p>肾病专家提供的药方：金钱草50克，三棱15克，莪术15克，鸡内金15克，丹参20克，赤芍15克，红花15克，丹皮15克，翟麦20克，扁蓄20克，滑石20克，车前子15克，桃仁15克。</p>
 <p>水煎，每日一剂，早晚温服。此剂对于结石停留于上尿路，特别是肾盏较高部位，体积较大者效果不明显。</p>
 <p><strong>喝鲜柠檬汁法</strong></p>
-<figure id="attachment_5681624" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-5681624" src="https://i.epochtimes.com/assets/uploads/2013/12/1312232106121983-450x300.jpg" alt="新鲜柠檬lemon(摄影：ALEX/大纪元)" width="450" b="300" /><figcaption class="wp-caption-text">新鲜柠檬lemon。（ALEX／大纪元）</figcaption></figure>
+<figure id="attachment_5681624" aria-describedby="caption-attachment-5681624" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2013/12/1312232106121983-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-5681624" src="https://i.epochtimes.com/assets/uploads/2013/12/1312232106121983-450x300.jpg" alt="新鲜柠檬lemon(摄影：ALEX/大纪元)" width="450" b="300" /></a><figcaption id="caption-attachment-5681624" class="wp-caption-text">新鲜柠檬lemon。（ALEX／大纪元）</figcaption></figure>
 <p>每天喝至少12个新鲜柠檬榨汁，柠檬汁太酸时可对温开水冲淡，可加少许天然海盐，口感更滑润顺口；但切不能加糖。新鲜柠檬要临喝前才榨汁，榨汁后分数次将汁喝完，连续喝上至少五天，肾结石就会从尿道中排出来。三餐饮食如常，以清淡为佳。</p>
 <p>若肾结石很大，已经造成发炎疼痛，可以喝小红莓汁来消炎止痛。</p>
 <p>此法排肾石甚为有效，但在排除过程中会引起腰部、膀胱、尿道等处产生剧痛，甚至有人痛得在地上打滚，可是最后终能顺利将结石排出。此法虽有疼痛的可能，但与开刀相比，还是小巫见大巫，且开刀有时还会引致其它不可预知的意外或副作用。</p>
@@ -47,42 +46,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/4/8/n7534788.md#1">科学证实有益肾脏的五种食物</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/5/2/n7793452.md#1">老是吃不饱体重却增加  竟是肾功能受损</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/6/28/n8045032.md#1">男性补肾养生做好三件事</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/8/15/n8201479.md#1">六种征兆 小心肾脏健康拉警报</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/8/31/n8253797.md#1">俞晓薇：加拿大病患大陆3天换肾再引质疑</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/8/31/n8254040.md#1">云南一男子遇车祸 手术后双肾离奇失踪</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/9/4/n8266333.md#1">三个简单方法 帮肾脏排毒</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/16/9/7/n8275502.md#1">补肾可抗老 三大中药材是抗老良药</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/2/29/n11905606.md#1">小便红色是血尿吗？血尿这些症状暗示何疾病</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/19/12/31/n11758909.md#1">女性出现这些症状 可能是肾虚 5大原因别轻忽</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/8/n7534788.md#1">科学证实有益肾脏的五种食物</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/2/n7793452.md#1">老是吃不饱体重却增加  竟是肾功能受损</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/28/n8045032.md#1">男性补肾养生做好三件事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/15/n8201479.md#1">六种征兆 小心肾脏健康拉警报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/31/n8253797.md#1">俞晓薇：加拿大病患大陆3天换肾再引质疑</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/31/n8254040.md#1">云南一男子遇车祸 手术后双肾离奇失踪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/4/n8266333.md#1">三个简单方法 帮肾脏排毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/7/n8275502.md#1">补肾可抗老 三大中药材是抗老良药</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/9/n13634222.md#1">很多人蛋白质吃不足 这样吃才能增肌减脂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tnue256/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/8/n12093968.md#1">传十多个百亿富豪曾被扣北京 只想保命</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/8/n12092867.md#1">台政府纾困 艺人脱线吁：钱留给“真正需要”者</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/9/n12094858.md#1">中共海军早晚超美？国防教授：不要打鸡血</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/8/n12092171.md#1">专访美国务院发言人 详解病毒源头之争</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/6/n12088365.md#1">【最新疫情5·8】加州今天开放 详情一览</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/7/n12090922.md#1">中共洗脑片《后浪》翻车 演员何冰遭海量差评</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/7/n12091172.md#1">伊能静抵上海接受隔离 微博帖文触怒小粉红</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/7/n12091512.md#1">樱井翔节目介绍陈时中 三分钟影片感动网友</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/7/n12089652.md#1">崔智友临盆在即 疫情中为高龄产妇加油</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/8/n12094115.md#1">罗志祥再失大陆工作 钟汉良取代节目导师角色</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/13/3/31/n3835627.md#1">米开朗基罗（7）《创世纪》（上）</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/4/29/n12069593.md#1">超现科学的神功 中医妙手回春实证</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/3/26/n11977962.md#1">奉创世主意旨  建立美国</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/5/7/n12091094.md#1">铃兰：死生契阔不由人</a></li>
-<li><a href="https://github.com/tnue256/djy/blob/master/gb/20/4/23/n12056221.md#1">“焚券”慈心义举  获命运之神青睐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tnue256/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tnue256/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/30/n8354645.htm">另类疗法排肾结石</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/30/n8354645.htm">另类疗法排肾结石</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tnue256/djy/blob/master/gb/16/9/30/n8354645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tnue256/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tnue256/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tnue256/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tnue256/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tnue256/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/9/30/n8354645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
